<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings_menu_item"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh_menu_item"
        android:icon="@drawable/ic_refresh_icon"
        android:title="@string/refresh_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/locals_chargers_item"
        android:icon="@drawable/ic_location_enabled"
        android:title="@string/near_me"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorites_menu_item"
        android:title="@string/favorite" />

    <group android:checkableBehavior="all">
        <item android:id="@+id/only_free_checkbox"
            android:titleCondensed="Options"
            app:showAsAction="never"
            android:title="@string/only_free"
            android:icon="@android:drawable/ic_menu_preferences">
        </item>
    </group>
</menu>