<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <ImageView
        android:id="@+id/ispaidImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/electric_vehicle_charging_station_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/nomStationTextView"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/station_name"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_info"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nomStationTextView" />

        <TextView
            android:id="@+id/longTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/longitude_info"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latTextView" />

        <TextView
            android:id="@+id/nomOperateurTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/operator_name"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/nomStationTextView"
            app:layout_constraintTop_toBottomOf="@+id/nomStationTextView" />

        <TextView
            android:id="@+id/adressTextView"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/adresse"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/longTextView"
            app:layout_constraintStart_toStartOf="@+id/nomOperateurTextView" />

        <ImageView
            android:id="@+id/payantImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dollar_sign" />

        <TextView
            android:id="@+id/payantTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/is_paid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/payantImageView"
            app:layout_constraintTop_toBottomOf="@+id/payantImageView" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/data_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>