<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametresActivity">

    <RadioGroup
        android:id="@+id/unit_choice_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/unit_choice"
        app:layout_constraintTop_toBottomOf="@+id/unit_choice">

        <RadioButton
            android:id="@+id/metric_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/imperial_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/unit_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/units_info"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#439E43" />
</androidx.constraintlayout.widget.ConstraintLayout>